testdata/baselines/reference/submodule/conformance/jsdocTemplateTag2.errors.txt
github17339.js(7,4): error TS8004: Type parameter declarations can only be used in TypeScript files.


==== github17339.js (1 errors) ====
    var obj = {
    	/**
    	 * @template T
    	 * @param {T} a
    	 * @returns {T}
    	 */
    	x: function (a) {
    	  ~~~~~~~~~~~~~~~
    		return a;
    ~~~~~~~~~~~
    	},
    ~~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    };
    